--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "clsx": "^2.1.1",
         "lucide-react": "^0.438.0",
         "next": "14.2.23",
+        "openai": "^4.83.0",
         "react": "^18",
         "react-dom": "^18",
         "tailwind-merge": "^2.5.2",
