--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "scripts": {
         "dev": "next dev",
         "build": "next build",
+        "postbuild": "next-sitemap",
         "start": "next start",
         "lint": "next lint",
         "format": "prettier --write ."
@@ -17,6 +18,7 @@
         "clsx": "^2.1.1",
         "lucide-react": "^0.438.0",
         "next": "^14.2.24",
+        "next-sitemap": "^4.2.3",
         "openai": "^4.84.0",
         "react": "^18",
         "react-dom": "^18",
